fixed particles overlapping footer

--- a/src/style.css
+++ b/src/style.css
@@ -254,6 +254,7 @@ button:focus {
   background-size: cover !important;
   width: 100%;
   height: 100%;
+  z-index: -1 !important;
 }
 
 .home-header {
@@ -472,7 +473,9 @@ button:focus {
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
+  padding-bottom: 10px;
 }
+
 .project-card-view:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
